--- a/module1/Index.html
+++ b/module1/Index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css" type="text/css"/>
+    <link rel="stylesheet" href="css/iconsfont.css" type="text/css"/>
+    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+        <title>Document</title>
 </head>
 <body>
-    
+    <p>Some text</p>
+    <div class="links">
+        <a href="" class="link icon-facebook"></a>
+        <a href="" class="link icon-twitter"></a>
+        <a href="" class="link icon-youtube"></a>
+    </div>
 </body>
 </html>
