--- a/module1/Index.html
+++ b/module1/Index.html
@@ -4,17 +4,216 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Data Warehouse is a data storage area that has been
+    tested for security, so you can store your data here
+    safely but not be afraid of being stolen by others.">
+    <link rel="icon" type="image/x-icon" href="img/Logo.svg">
     <link rel="stylesheet" href="css/reset.css" type="text/css"/>
-    <link rel="stylesheet" href="css/iconsfont.css" type="text/css"/>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
-        <title>Document</title>
+        <title>Warehouse - Save your data storage here.</title>
 </head>
 <body>
-    <p>Some text</p>
-    <div class="links">
-        <a href="" class="link icon-facebook"></a>
-        <a href="" class="link icon-twitter"></a>
-        <a href="" class="link icon-youtube"></a>
+    <header class="header">
+    <div class="header-container">
+        <div class="logo"><a href="index.html"><img src="img/Logo.svg" alt="logo"></a></div>
+        <nav class="menu">
+            <ul class="menu-list">
+                <li><a class="menu-item menu-item--active" href="#about" data-menu="About">About</a></li>
+                <li><a class="menu-item" href="#help" data-menu="Help">Help</a></li>
+                <li><a class="menu-item" href="#features" data-menu="Features">Features</a></li>
+            </ul>
+        </nav>
     </div>
+    </header>
+    <main>
+        <section class="intro">
+            <div class="_container">
+                <div class="intro__content">
+                    <div class="title intro__title">
+                        <h1>Save your data storage here.</h1>
+                    </div>
+                    <div class="text intro__text"><p>Data Warehouse is a data storage area that has been
+                        tested for security, so you can store your data here
+                        safely but not be afraid of being stolen by others.</p>
+                    </div>
+                    <a href="" class="intro__btn">Learn more</a>
+                </div>
+            </div>
+            <img class="intro__img" src="img/intro__img.svg" alt="Intro Image">
+        </section>
+        <section class="about" id="about">
+            <div class="_container about__container">
+                <img class="about__img" src="img/about__img.svg" alt="About Image">
+                <div class="about__content">
+                    <div class="title about__title">
+                        <h2>We are a high-level data storage bank</h2>
+                    </div>
+                    <p class="text about__text">The place to store various data that you can access at any time through the internet  and where you can carry it.
+                        This very flexible storage area has a high level of security. To enter into your own data you must enter the password that you created when you registered in this Data Warehouse. </p>
+                </div>
+            </div>
+        </section>
+        <section class="features" id="features">
+            <div class="_container features__container">
+                <div class="features__header">
+                    <h2 class="title features__title">Features</h2>
+                    <p class="text features__text">Some of the features and advantages that we provide for those of you who store data in this Data Warehouse.
+                    </p>
+                </div>
+                <div class="features__items">
+                    <div class="features__column">
+                        <article class="features__item feature__item--search">
+                            <img class="feature__img" src="img/feature__search.png" alt="Feature Image">
+                            <div class="feature__content">
+                                <div class="feature__text-wrapper">
+                                    <h3 class="feature__name">Search Data</h3>
+                                    <p class="text feature__description">Don’t worry if your data is very large, the Data Warehouse provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+                                </div>
+                                <a href="#" class="features__learn-more">
+                                    <span>Learn more</span>
+                                    <img class="features__learn-more__arrow" src="img/learn-more.svg" alt="Next">
+                                </a> 
+                            </div>
+                        </article>
+                    </div>
+                    <div class="features__column">
+                        <article class="features__item feature__item--access">
+                            <img class="feature__img" src="img/feature__access.png" alt="Feature Image">                            
+                            <div class="feature__content">
+                                <div class="feature__text-wrapper">
+                                    <h3 class="feature__name">24 Hours Access</h3>
+                                    <p class="text feature__description">Access is given 24 hours a full morning to night and meet again in the morning, giving you comfort when you need data when urgent.                                        
+                                    </p>
+                                </div>
+                                <a href="#" class="features__learn-more">
+                                    <span>Learn more</span>
+                                    <img class="features__learn-more__arrow" src="img/learn-more.svg" alt="Next">
+                                </a>  
+                            </div>
+                        </article>
+                    </div>
+                    <div class="features__column">
+                        <article class="features__item feature__item--print">
+                            <img class="feature__img" src="img/feature__print.png" alt="Feature Image">
+                            <div class="feature__content">
+                                <div class="feature__text-wrapper">
+                                    <h3 class="feature__name">Print Out</h3>
+                                    <p class="text feature__description">
+                                        Print out service gives you convenience if someday you need print data, just edit it all and just print it.
+                                    </p>
+                                </div>
+                                <a href="#" class="features__learn-more">
+                                    <span>Learn more</span>
+                                    <img class="features__learn-more__arrow" src="img/learn-more.svg" alt="Next">
+                                </a> 
+                            </div>
+                        </article>
+                    </div>
+                    <div class="features__column">
+                        <article class="features__item feature__item--security">
+                            <img class="feature__img" src="img/feature__security.png" alt="Feature Image">
+                            <div class="feature__content">
+                                <div class="feature__text-wrapper">
+                                    <h3 class="feature__name">Security Code</h3>
+                                    <p class="text feature__description">Data Security is one of our best facilities. Allows for your files to be safer. The file can be secured with a code or password that you created, so only you can open the file.</p>
+                                </div>
+                                <a href="#" class="features__learn-more">
+                                    <span>Learn more</span>
+                                    <img class="features__learn-more__arrow" src="img/learn-more.svg" alt="Next">
+                                </a>  
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="testimonials">
+            <div class="testimonials__container _container">
+                <div class="testimonials__title title">
+                    <h2>Testimonials</h2>
+                </div>
+                <div class="testimonials__slider">
+                    <ul class="slider__list">
+                        <li class="slider__item active">
+                            <img src="img/john__fang.png" alt="avatar" class="slider-item__avatar">
+                            <div class="slider-item__content">
+                                <h4 class="slider-item__title title">John Fang</h4>
+                                <a class="slider-item__subtitle" href="https://wordfaang.com/">wordfaang.com</a>
+                                <p class="slider-item__text text"> Suspendisse ultrices at diam lectus nullam. 
+                                Nisl, sagittis viverra enim erattortor ultricies massa turpis. Arcupulvinar aenean nam laoreet nulla.<p>
+                            </div>
+                        </li>
+                        <li class="slider__item">
+                            <img src="img/jeny__doe.png" alt="avatar" class="slider-item__avatar">
+                            <div class="slider-item__content">
+                                <h4 class="slider-item__title title">Jeny Doe</h4>
+                                <p class="slider-item__subtitle">UX Engineer</p>
+                                <p class="slider-item__text text">Suspendisse ultrices at diam lectus nullam. Nisl, sagittis viverra enim erat tortor.<p>
+                            </div>
+                            <div class="slider-item__shadow">                            
+                            </div>
+                        </li>
+                        <li class="slider__item">
+                            <img src="img/william.png" alt="avatar" class="slider-item__avatar">
+                            <div class="slider-item__content">
+                                <h4 class="slider-item__title title">William</h4>
+                                <p class="slider-item__subtitle">Web Designer</p>
+                                <p class="slider-item__text text">Suspendisse ultrices at diam lectus nullam. Nisl, sagittis viverra enim erat tortor.<p>
+                            </div>
+                            <div class="slider-item__shadow">                            
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="slider-controlls">
+                        <div class="slider-controlls__container">
+                            <div class="slider-controlls__buttons">
+                                <button class="slider-controlls__button active"></button>
+                                <button class="slider-controlls__button"></button>
+                                <button class="slider-controlls__button"></button>   
+                                <button class="slider-controlls__button"></button>                                
+                            </div>
+                            <div class="slider-controlls__arrows">
+                                    <img class="previous__arrow slider-controlls__arrow" src="img/previous__arrow.svg" alt="previous arrow">
+                                    <img class="next__arrow slider-controlls__arrow" src="img/next__arrow.png" alt="next arrow">  
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="footer" id="help">
+            <div class="footer__top-line">                
+            </div>
+            <div class="footer__container _container">
+                <div class="footer__content">
+                    <div class="footer__header">
+                        <img class="footer__logo" src="img/Logo.svg" alt="Logo">
+                        <h3 class="footer__title title">DataWarehouse                    
+                        </h3>
+                    </div>
+                    <p class="footer__address">Warehouse Society, 234 <br> Bahagia Ave Street PRBW 29281
+                    </p>
+                    <a href="mailto:info@warehouse.project" class="footer__email">info@warehouse.project</a>
+                    <a href="tel:12323434" class="footer__phone"> 1-232-3434 (Main)</a>
+                    <p class="footer__copyright">© Datawarehouse™, 2020. All rights reserved. <br> Company Registration Number: 21479524.
+                    </p>
+                </div>
+                <div class="footer__social-media">
+                    <h4 class="social-media__title">Social Media</h4>
+                    <div class="media__links">
+                        <a href="#" class="media__link media__link--facebook">
+                            <img src="img/icon__facebook.png" alt="Facebook">
+                        </a>
+                        <a href="#" class="media__link media__link--twitter">
+                            <img src="img/icon__twitter.png" alt="Twitter">
+                        </a>
+                        <a href="#" class="media__link media__link--twitter">
+                            <img src="img/icon__instagram.png" alt="Instagram">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
